bk_ida/gobmkida/c3/initialize_dragon_data
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1177:6: error: use of undeclared identifier 'xmmword_4A6770'
v2 = xmmword_4A6770; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1178:6: error: use of undeclared identifier 'xmmword_4A6780'
v3 = xmmword_4A6780; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1179:6: error: use of undeclared identifier 'xmmword_4A6790'
v4 = xmmword_4A6790; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1192:12: error: expected expression
*( _OWORD *)( v5 + 10436624) = v2; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1192:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v5 + 10436624) = v2; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1193:12: error: expected expression
*( _OWORD *)( v5 + 10436640) = v3; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1193:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v5 + 10436640) = v3; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1194:12: error: expected expression
*( _OWORD *)( v5 + 10436656) = v4; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1194:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v5 + 10436656) = v4; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1200:6: error: use of undeclared identifier 'xmmword_4A6790'
v4 = xmmword_4A6790; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1201:6: error: use of undeclared identifier 'xmmword_4A6780'
v3 = xmmword_4A6780; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/engine/dragon.c:1202:6: error: use of undeclared identifier 'xmmword_4A6770'
v2 = xmmword_4A6770; 
     ^
12 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/initialize_dragon_data/src/obj/1/dragon.o] Error 1
